--- a/templates/compliment.html
+++ b/templates/compliment.html
@@ -1,9 +1,6 @@
-<!doctype html>
-<html>
-<head>
-  <title>A Compliment</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}A Compliment{% endblock %}
+{% block body %}
     Hi {{ person }}! I think you're {{ compliment }}!
     <form action="/game">
         <label for="game">Would you like to play a game?
@@ -12,5 +9,4 @@
         </label>
         <input type="submit">
     </form>
-</body>
-</html>
+{% endblock %}
