--- a/templates/goodbye.html
+++ b/templates/goodbye.html
@@ -1,8 +1,3 @@
-<html>
-<head>
-    <title>Goodbye!</title>
-</head>
-<body>
-    <h1>Bye bye!</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}Goodbye!{% endblock %}
+{% block body%}Bye bye!{% endblock %}
