--- a/templates/madlib.html
+++ b/templates/madlib.html
@@ -1,11 +1,14 @@
-<!doctype html>
-<html>
-<head>
-    <title>A Madlib</title>
-</head>
-<body>
-    <h1>Your Madlib</h1>
+{% extends 'base.html' %}
 
-    <p>There once was a person named {{ person }}. Their hair was {{ color }} and their pants were {{ adjective }}.  During lunch, they ate {{ noun }}.</p>
-</body>
-</html>
+
+{% block title %}A Madlib{% endblock %}
+
+    {% block body %}
+        <h1>Your Madlib</h1>
+        There once was a person named {{ person }}. Their hair was {{ color }} and their pants were {{ adjective }}.  During lunch, they ate {{ noun }}.
+        {% if verbs %}
+            {% for verb in verbs %}
+                They liked to {{ verb }}.
+            {% endfor %}
+        {% endif %}
+    {% endblock %}
